Modernize native warmup reflection